# screenspot-trm

./: .gitignore  README.md  convert_embeddings_fp16.py  debug_parquet.py  debug_siglip.py  evaluate.py  inspect_model.py  precompute_embeddings.py  precompute_embeddings_patches.py  pyproject.toml  requirements.txt  test_rewards.py  train.py  train_cached.py  train_cached_v2.py  train_simple.py  train_v2.py
.cursor/plans/: screenspot_trm_bbox_model_781ca1c8.plan.md
config/: model.yaml  train.yaml
data/: __init__.py  screenspot_dataset.py
data_loader/: screenspot.py
dataset_prep/: add_uground.py  main.py  preprocess.py  pyproject.toml
models/: __init__.py  agent.py  bbox_head.py  clip_backbone.py  clip_backbone_patches.py  encodings.py  fusion.py  fusion_attention.py  layers.py  policy.py  screen_trm_model.py  standard_transformer.py  trm.py  trm_core.py
training/: rewards.py  trainer.py
utils/: __init__.py  ema.py  losses.py  metrics.py  visualization.py
